--- a/package.json
+++ b/package.json
@@ -10,8 +10,36 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-native-fontawesome": "^0.3.2",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-clipboard/clipboard": "^1.13.2",
+    "@react-native-community/cli-platform-android": "^13.6.9",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.8.0",
+    "@react-navigation/bottom-tabs": "^6.5.5",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@stomp/stompjs": "^7.0.0",
+    "axios": "^1.6.5",
+    "qs": "^6.11.2",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-google-places-autocomplete": "^2.5.7",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-maps": "^1.20.1",
+    "react-native-modal": "^13.0.1",
+    "react-native-permissions": "^4.1.5",
+    "react-native-push-notification": "^8.1.1",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "^3.29.0",
+    "react-native-svg": "^15.5.0",
+    "react-native-vector-icons": "^10.1.0",
+    "sockjs-client": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
