--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -74,9 +74,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.comion"
+    namespace "org.camionet"
     defaultConfig {
-        applicationId "com.comion"
+        applicationId "org.camionet"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
@@ -84,10 +84,10 @@ android {
     }
     signingConfigs {
         debug {
-            storeFile file('debug.keystore')
-            storePassword 'android'
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
+            storeFile file('camionet.keystore')
+            storePassword '07658411799'
+            keyAlias 'camionet'
+            keyPassword '07658411799'
         }
     }
     buildTypes {
