--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -39,3 +39,9 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+MYAPP_RELEASE_STORE_FILE=camionet.keystore
+MYAPP_RELEASE_KEY_ALIAS=camionet
+MYAPP_RELEASE_STORE_PASSWORD=07658411799
+MYAPP_RELEASE_KEY_PASSWORD=07658411799
+
