--- a/ios/camionet.xcodeproj/xcshareddata/xcschemes/camionet.xcscheme
+++ b/ios/camionet.xcodeproj/xcshareddata/xcschemes/camionet.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "comion.app"
-               BlueprintName = "comion"
-               ReferencedContainer = "container:comion.xcodeproj">
+               BuildableName = "camionet.app"
+               BlueprintName = "camionet"
+               ReferencedContainer = "container:camionet.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "comionTests.xctest"
-               BlueprintName = "comionTests"
-               ReferencedContainer = "container:comion.xcodeproj">
+               BuildableName = "camionetTests.xctest"
+               BlueprintName = "camionetTests"
+               ReferencedContainer = "container:camionet.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "comion.app"
-            BlueprintName = "comion"
-            ReferencedContainer = "container:comion.xcodeproj">
+            BuildableName = "camionet.app"
+            BlueprintName = "camionet"
+            ReferencedContainer = "container:camionet.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "comion.app"
-            BlueprintName = "comion"
-            ReferencedContainer = "container:comion.xcodeproj">
+            BuildableName = "camionet.app"
+            BlueprintName = "camionet"
+            ReferencedContainer = "container:camionet.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
